--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -242,6 +242,7 @@
 2021-02-28 (J)Elsevier.smart.veh.in.6G #deadlines due:2021-03-31
 2021-02-28 (J)IEEE.Sensors.indoor.positioning #deadlines due:2021-03-31
 2021-02-28 BRAINS.blockchain #deadlines due:2021-03-31
+2021-02-28 九州大学・准教授の公募（情報学部門・情報学分野） #jobhunt due:2021-03-31
 2021-02-28 名古屋大学・大学院工学研究科・教授公募・情報学 #jobhunt due:2021-03-31
 2021-02-28 名古屋大学・知能情報学分野 #jobhunt due:2021-03-31
 2021-02-28 東京工業大学・応用数理分野 #jobhunt due:2021-03-31
@@ -258,6 +259,7 @@
 2021-02-28 GLOBECOM #deadlines due:2021-04-15
 2021-02-28 bestat株式会社・技術責任者・CTO #jobhunt due:2021-04-15
 2021-02-28 東京都市大学・経営情報システム #jobhunt due:2021-04-16
+2021-02-28 金沢大学・准教授の公募（通信情報工学分野） #jobhunt due:2021-04-16
 2021-02-28 東北大学・情報リテラシー論分野 #jobhunt due:2021-04-22
 2021-02-28 群馬大学・情報通信分野 #jobhunt due:2021-04-23
 2021-02-28 香川大学・創造工学部・准教授または講師の公募（機械システムコース） #jobhunt due:2021-04-23
@@ -267,6 +269,7 @@
 2021-02-28 知能情報学関連分野 #jobhunt due:2021-04-30
 2021-02-28 ACM.GoodIT #deadlines due:2021-05-01
 2021-02-28 (J)tailor.digitaltwin #deadlines due:2021-05-05
+2021-02-28 新潟大学・自然科学系教員公募（システムソフトウェア，並列分散処理等のソフトウェア関連分野、准教授）（再公募） #jobhunt due:2021-05-07
 2021-02-28 滋賀県立大学・知能情報工学分野 #jobhunt due:2021-05-07
 2021-02-28 岡山理科大学・准教授・講師または助教（計算機工学，コンピュータシステム分野） #jobhunt due:2021-05-10
 2021-02-28 ACM.middleware #deadlines due:2021-05-15
