--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -238,10 +238,10 @@
 2021-05-29 <strike>流通科学大学・データ分析分野</strike> #jobhunt due:2021-05-31
 2021-05-29 <strike>金城学院大学・生活環境学部生活マネジメント学科（情報学）</strike> #jobhunt due:2021-05-31
 2021-05-29 <strike>電気通信大学・セキュリティ情報学分野</strike> #jobhunt due:2021-05-31
+2021-05-29 <strike>青山学院大学理工学部電気電子工学科✘fieldmismatch</strike> #jobhunt due:2021-05-31
 2021-05-29 <strong>中央大学・理工学部・ビジネスデータサイエンス学科</strong> #jobhunt due:2021-05-31
 2021-05-29 IEEE.ICS2.smartcities #deadlines due:2021-05-31
 2021-05-29 ●(email)株式会社ヒューマノーム研究所(5jobs) #jobhunt due:2021-05-31
-2021-05-29 ●(郵送必着)青山学院大学理工学部電気電子工学科 #jobhunt due:2021-05-31
 2021-05-29 (J)MDPI.cloud.based.iot.smartcities #deadlines due:2021-06-01
 2021-05-29 (J)MDPIelectronics.SDN.futureinternet #deadlines due:2021-06-01
 2021-05-29 (cambridgepress)book.proposal #deadlines due:2021-06-01
